prevent image stretching on mobile

--- a/styles/Categories.module.css
+++ b/styles/Categories.module.css
@@ -87,7 +87,7 @@
   }
   .card img{
     min-height: 100%;
-    width: 18em;
+    width: 16em;
   }
   .card h3 {
     font-size: 18px;
